# fortls

./: .buildinfo  .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.html  README.md  SECURITY.md  contact.html  contributing.html  editor_integration.html  features.html  fortls.html  fortls.parsers.html  fortls.parsers.internal.html  fortls.py  fortls_changes.html  genindex.html  index.html  modules.html  objects.inv  options.html  py-modindex.html  pyproject.toml  quickstart.html  search.html  searchindex.js  setup.cfg  setup.py  sitemap.xml  test_pp_include.py  test_regex.py  test_regex2.py  test_regex3.py
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql-analysis.yml  docs.yml  docs_preview.yml  main.yml  python-publish.yml  update-intrinsics.yml
_sources/: README.md.txt  fortls.rst.txt  fortls_changes.md.txt  index.rst.txt  options.rst.txt  quickstart.rst.txt
_static/: documentation_options.js
assets/: README.md
docs/: Makefile  conf.py  contact.rst  contributing.rst  editor_integration.rst  features.rst  fortls.parsers.internal.rst  fortls.parsers.rst  fortls.rst  index.rst  modules.rst  options.rst  quickstart.rst  requirements.txt
docs/html_extra/: robots.txt
fortls/: __init__.py  _version.py  compile_commands.py  constants.py  debug.py  exceptions.py  folding_ranges.py  fortls.schema.json  ftypes.py  helper_functions.py  interface.py  intrinsic.modules.json  intrinsic.procedures.markdown.json  intrinsic_funs.json  intrinsic_mods.json  intrinsics.py  json_templates.py  jsonrpc.py  keywords.json  langserver.py  objects.py  parse_fortran.py  regex_patterns.py  schema.py  statements.json  version.py
fortls/parsers/internal/: associate.py  ast.py  base.py  block.py  diagnostics.py  do.py  enum.py  function.py  if_block.py  imports.py  include.py  interface.py  intrinsic.procedures.markdown.json  intrinsics.py  method.py  module.py  parser.py  program.py  scope.py  select.py  statements.json  submodule.py  subroutine.py  type.py  use.py  utilities.py  variable.py  where.py
src/fortls/: __init__.py  interface.py  intrinsics.py  jsonrpc.py  regex_patterns.py
test/: setup_tests.py  test_compile_commands.py  test_helper.py  test_hover_docs.py  test_hover_markdown_indent.py  test_interface.py  test_parser.py  test_pp_include_coverage.py  test_pp_include_definition.py  test_preproc.py  test_preproc_parser.py  test_regex_patterns.py  test_server.py  test_server_completion.py  test_server_definitions.py  test_server_diagnostics.py  test_server_documentation.py  test_server_folding.py  test_server_folding_range.py  test_server_hover.py  test_server_implementation.py  test_server_init.py  test_server_messages.py  test_server_references.py  test_server_rename.py  test_server_signature_help.py
test/test_source/: .fortls  f90_config.json  test_enum_ref.f90  test_import.f90  test_inc.f90  test_nonintrinsic.f90  test_prog.f08  test_submodule.f90  tmp.py  wrong_syntax.json
test/test_source/compile_commands/: cmake_format.json  fpm_format.json
test/test_source/completion/: test_vis_mod_completion.f90  use_only_interface.f90
test/test_source/diag/: conf_long_lines.json  test_contains.f90  test_critical.f90  test_enum.f90  test_external.f90  test_forall.f90  test_function.f90  test_function_arg_list.f90  test_implicit_none.f90  test_import.f90  test_lines.f90  test_mixed_case_interface_sub_child.f90  test_scope_end_name_var.f90  test_scope_overreach.f90  test_semicolon.f90  test_use_ordering.f90  test_var_shadowing_keyword_arg.f90  test_variable.f90  test_visibility.f90  test_where.f90
test/test_source/docs/: test_doxygen.f90  test_ford.f90  test_module_and_type_doc.f90  test_param_list.f90
test/test_source/excldir/sub1/: tmp.f90
test/test_source/fixed/: comment_as_reference.f
test/test_source/folding_range/: test_folding_range.f  test_folding_range.f90
test/test_source/hover/: associate_block.f90  associate_block_2.f90  complicated_kind_spec.f90  functions.f90  intent.f90  multiline_lexical_tokens.f90  parameters.f90  pointers.f90  recursive.f90  spaced_keywords.f90  types.f90
test/test_source/imp/: import.f90  submodule.f90
test/test_source/parse/: .fortls  line_continuations.f90  submodule.f90  test_incomplete_dims.f90  test_kinds_and_dims.f90  trailing_semicolon.f90
test/test_source/parse/mixed/: multilines.F90  preproc_and_normal_syntax.F90
test/test_source/pp/: .fortls  .pp_conf.json  preproc.F90  preproc_elif.F90  preproc_elif_elif_skip.F90  preproc_else.F90  preproc_if_elif_else.F90  preproc_if_elif_skip.F90  preproc_if_nested.F90  preproc_ifdef.F90  preproc_keywords.F90  preproc_spacing_arg_defs.F90  preproc_use.F90  preproc_use_include.F90
test/test_source/pp/include/: indent.h  mpi.h  omp.h  petscerror.h  petscpc.h
test/test_source/pp/sources/: mpi.f90  mpi_f08.f90
test/test_source/rename/: test_rename_imp_type_bound_proc.f90  test_rename_intrinsic.f90  test_rename_nested.f90
test/test_source/signature/: help.f90  nested_sigs.f90
test/test_source/subdir/: test_folding_if.f90  test_folding_select_case.f90  test_folding_subroutine.f90  test_free.f90  test_if_folding.f90  test_mline_sub_folding.f90  test_rename.F90  test_select_case_folding.f90  test_submod.F90  test_vis.f90
test/test_source/use/: comment_after_use.f90  use.f90
test/test_source/vis/: private.f90
