[build-system]
requires = [
    "setuptools >= 45",
    "wheel",
    "setuptools_scm[toml] >= 7.0",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "fortls/_version.py"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
minversion = "7.2.0"
addopts = "-v --cov=fortls --cov-report=html --cov-report=xml --cov-context=test"
testpaths = ["fortls", "test"]
