[metadata]
name = fortls
url = https://gnikit.github.io/fortls
author = Giannis Nikiteas
author_email = giannis.nikiteas@gmail.com
description = fortls - Fortran Language Server
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Fortran
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS
keywords =
    fortran
    language server
    language server protocol
    lsp
    fortls
project_urls =
    Donate = https://github.com/sponsors/gnikit
    Documentation = https://gnikit.github.io/fortls
    Changes = https://github.com/gnikit/fortls/blob/master/CHANGELOG.md
    Tracker = https://github.com/gnikit/fortls/issues
    Source Code = https://github.com/gnikit/fortls

[options]
package_dir =
    = src
python_requires = >= 3.7
install_requires =
    json5
    packaging
    importlib-metadata; python_version < "3.8"
    typing-extensions; python_version < "3.8"

[options.packages.find]
where = src

[options.package_data]
fortls =
    *.json

[options.entry_points]
console_scripts =
    fortls = fortls:main

[options.extras_require]
dev =
    pytest >= 5.4.3
    pytest-cov >= 2.12.1
    black
    isort
    pre-commit
docs =
    sphinx >= 4.0.0
    sphinx-argparse
    sphinx-autodoc-typehints
    sphinx_design
    sphinx-copybutton
    furo
    myst-parser
    sphinx-sitemap

[flake8]
max-line-length = 88
extend-ignore = E203, E722
