[metadata]
name = fortls
url = https://fortls.fortran-lang.org
author = Giannis Nikiteas
author_email = giannis.nikiteas@gmail.com
description = fortls - Fortran Language Server
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Fortran
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS
keywords =
    fortran
    language server
    language server protocol
    lsp
    fortls
project_urls =
    # Donate = https://github.com/sponsors/gnikit
    Documentation = https://fortls.fortran-lang.org
    Changes = https://github.com/fortran-lang/fortls/blob/master/CHANGELOG.md
    Tracker = https://github.com/fortran-lang/fortls/issues
    Source Code = https://github.com/fortran-lang/fortls

[options]
packages = find:
python_requires = >= 3.7
install_requires =
    json5
    packaging
    importlib-metadata; python_version < "3.8"
    typing-extensions; python_version < "3.8"

[options.package_data]
fortls = *.json

[options.entry_points]
console_scripts =
    fortls = fortls.__init__:main

[options.extras_require]
dev =
    pytest >= 7.2.0
    pytest-cov >= 4.0.0
    pytest-xdist >= 3.0.2
    black
    isort
    pre-commit
    pydantic==1.10.11
docs =
    sphinx >= 4.0.0
    sphinx-argparse
    sphinx-autodoc-typehints
    sphinx_design
    sphinx-copybutton
    furo
    myst-parser
    sphinx-sitemap

[flake8]
max-line-length = 88
extend-ignore = E203, E722
